--- a/curriculo/curriculo/index.html
+++ b/curriculo/curriculo/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link rel="icon" href="img/favicon.jpg">
 	<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Dancing+Script&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<title>Curriculo Ice (Matheus Amarante) R6</title>
 </head>
@@ -31,7 +32,7 @@
 				<img src="img/Foto.jpg">
 			</div>
 			<div class="texto">
-				<p>Atualmente jogo pela equipe de Rainbow Six Siege chamada "Black Angels", cujo na qual sou suporte, mas tambem faço as funções de fragger e intermediario, posso dizer que faço de tudo um pouco, estudo na escola Etec Maria Cristina Medeiros, e faço e curso de informatica, tenho 16 anos e meus operadores favoritos são Maverick e Maestro. </p>	
+				<p>Atualmente jogo pela equipe de Rainbow Six Siege chamada "Gigolas Team", cujo na qual sou suporte, mas tambem faço as funções de fragger e intermediario, posso dizer que faço de tudo um pouco, estudo na escola Etec Maria Cristina Medeiros, e faço e curso de informatica, tenho 16 anos e meus operadores favoritos são Maverick e Maestro. </p>	
 			</div>
 		</section>
 		<section id="especialidades">
@@ -53,6 +54,65 @@
 				<p>Tenho uma visão de jogo excelente consigo estipular as plays do time de acordo com o comportamento tatico da equipe adversaria.</p>
 			</div>
 		</section>
+		<section id=competencias>
+			<h2>Minhas Competencias Socio Emocionais</h2>
+			<h3><a href="docs/eixoscompetencias.pdf" target="_blank">Veja aqui</a> quais sao todas as competencias pela BNCC.</h3>
+			<div class="comp">
+				<img src="img/vermelho.jpg">				 
+			 	<p>Sou uma pessoa organizada e muito determina a fazer de tudo cada vez melhor, tenho um foco e responsabilidade com tudo oq faço. </p>
+			</div>
+			<div class="comp">
+				<img src="img/verde.jpg">
+				<p>Tenho respeito por todos companheiros de equipe e com o tempo tem a confiança, sou empatico pois consigo me colocar no lugar da pessoa em momentos dificeis.</p>
+			</div>
+			<div class="comp">
+				<img src="img/azul.jpg">
+				<p>Eu confio demais em mim mesmo, se estou em momentos dificeis faço de tudo pra melhorar nunca deixo ninguem para tras, todos possuem estresse, ja eu consigo controlar tranquilamente meu nivel de estresse apenas relaxando e respirando. </p>
+			</div>
+			<h2>Algumas de Minhas Conquistas</h2>
+			<div class="comp ">
+				<a href=""><img src="img/jager.jpg"></a>
+				<p>Fui top fragger da Original Gamers na Prodigius Cup e Jogador de destaque na NewCupR6.</p>
+				
+			</div>
+			<div class="comp ">
+				<a href=""><img src="img/trofeu.jpg"></a>
+				<p>Ganhei a Prodigius Cup e Vice da NewCupR6 e atualmente estou na final da copa do mtdesigner e nas quartas de final da liga dos mestres.</p>
+			</div>
+			<div class="comp ">
+				<a href=""><img src="img/sledge.jpg"></a>
+				<p>Sou o atual lider do grupo de tm, liderando o record de kills sendo elas 25 kills em uma unica partida.</p>
+			</div>
+
+		</section>
+		<section id="hobbie">
+			<h2>Coisas que Gosto de Fazer</h2>
+			<div class="hobbie">
+				<h2>Tenho um canal no Youtube onde posto videos sobre taticas para o jogo, melhores momentos e partidas de campeonatos.</h2>
+				<iframe width="853" height="480" src="https://www.youtube.com/embed/SUio00ZMVys" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+			<div class="hobbie">
+				<h2>Outro Hobby que eu tenho é o de criar taticas em momentos aleatorios, como por exemplo quando estou curtindo uma festa.</h2>
+				<iframe width="853" height="480" src="https://www.youtube.com/embed/flfh_Iqlk8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</section>
+		<section id="contato">
+			<div>
+				<img src="img/ins.png" alt="email">
+				<p><a href="https://www.instagram.com/amarante7_/">Instagram</a></p>
+			</div>
+			<div>
+				<img src="img/gm.png" alt="email">
+				<p><a href="https://mail.google.com/mail/u/0/#inbox">matheusamarante29@gmail.com</a></p>
+			</div>
+			<div>
+				<img src="img/wp.png" alt="fone">
+				<p><a href="tel:xx555555555">(11) 998543625</a></p>
+			</div>
+		</section>
+		<footer>
+			<p>Desenvolvido por Matheus Amarante Batista dos Santos</p>
+		</footer>
 	</div>
 </body>
 </html>
